--- a/KGroupWorkSystem/Views/PalettePartsListView.xaml
+++ b/KGroupWorkSystem/Views/PalettePartsListView.xaml
@@ -4,6 +4,14 @@
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
-            
+        <ListView ItemsSource="{Binding Palettes.Value}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="palette id" DisplayMemberBinding="{Binding PaletteId}" Width="100"/>
+                    <GridViewColumn Header="user id" DisplayMemberBinding="{Binding UserId}" Width="100"/>
+                    <GridViewColumn Header="palette name" DisplayMemberBinding="{Binding PaletteName}" Width="200"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </UserControl>
